# LaTeXSnipper-Office

./: .eslintignore  .eslintrc.cjs  .gitignore  .gitmodules  .prettierignore  LaTeXSnipper-Office-Release.pfx  LaTeXSnipperOffice.cer  README.md  package-lock.json  package.json  tsconfig.ci.json  vite.config.js
.github/workflows/: build-all.yml  build-browser-extension.yml  build-native-office.yml  build-obsidian-plugin.yml  build-vscode-extension.yml  build-wps-plugin.yml  build.yml  ci.yml  main-package-verify.yml  native-office-ci.yml  package-nonwindows.yml  release.yml  (+2 more)
core-protocol/: command.router.ts  command.schema.json  command.schema.ts  schema-validate.mjs
docs/: MANUAL_INSTALLATION.md  OFFICE_INTEGRATION.md  STATUS.md  TESTING.md  architecture.md  dev-issues.md  font-fix.md  formula-library.md  implementation.md  metadata.md  module-structure.md  multi-platform.md  platform-integration.md
installer/: LaTeXSnipper.AllInOne.nsi
office-deploy/: taskpane.html
output/: LaTeXSnipper.NativeOffice.msi  LaTeXSnipper.NativeOffice.wixpdb  cab1.cab
scripts/: build-native-office-probes.ps1  build-native-office.js  build-ole-version.ps1  build-wps.js  build_dotm.py  build_word_addin.ps1  bump-version.ps1  check-ecosystem-drift.mjs  check-native-office-package.mjs  check-resource-drift.mjs  collect-native-office-diagnostics.ps1  customUI.xml  detect-package-impact.mjs  ensure-vsto-runtime.ps1  generate-mathjax-svg-fixtures.mjs  generate-release-metadata.mjs  initialize-native-office-ci.ps1  invoke-native-office-activation-gate.ps1  package-all.ps1  package-obsidian.js  prepare-native-office.js  replace-vba.ps1  resolve-prior-native-office-msi.ps1  smoke-office-registry.ps1  smoke-ole-activation.ps1  smoke-ole-registration.ps1  source-hygiene.mjs  stage-ecosystem-resources.js  stage-office-addin.mjs  stage-release-artifacts.ps1  stage-resources.js  stage-resources.ps1  sync-core.ps1  sync-ecosystem-versions.mjs  test-native-office-payload.ps1  test-wps-artifact-staging.ps1  verify-browser-packages.mjs  verify-package-contents.ps1  verify-vsto-manifests.ps1
src/: capture.html  capture.js  formula-data.js  i18n.js  index.html  main.js
src-tauri/: Cargo.toml  build.rs  latexsnipper-core  tauri.ci.conf.json  tauri.ci.windows.conf.json  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: build_word_addin.py  provenance.json
src-tauri/resources/Ecosystem/browser/: background.js  content.js  manifest.chrome.json  manifest.firefox.json  popup.html  popup.js
src-tauri/resources/Ecosystem/browser/chrome/: background.js  content.js  manifest.json  options.html  popup.html  popup.js  provenance.json  sidepanel.js
src-tauri/resources/Ecosystem/browser/chrome/_locales/en/: messages.json
src-tauri/resources/Ecosystem/browser/firefox/: THIRD_PARTY_LICENSES.txt  background.js  content.js  manifest.json  options.js  popup.js  provenance.json  sidepanel.html
src-tauri/resources/Ecosystem/browser/firefox/_locales/zh_CN/: messages.json
src-tauri/resources/Ecosystem/browser/firefox/chunks/: i18n-DVwQDXQx.js
src-tauri/resources/Ecosystem/obsidian/: main.js  manifest.json
src-tauri/resources/Ecosystem/vscode/: extension.js  package.json
src-tauri/resources/Ecosystem/wps/: install.bat  main.js
src-tauri/resources/Ecosystem/wps/ui/: taskpane.html
src-tauri/resources/NativeOffice/: LaTeXSnipper.NativeOffice.msi  installer.json
src-tauri/resources/NativeOffice/Excel/: LaTeXSnipper.Excel.dll.manifest  LaTeXSnipper.Excel.vsto
src-tauri/resources/NativeOffice/PowerPoint/: LaTeXSnipper.PowerPoint.dll.manifest  LaTeXSnipper.PowerPoint.vsto
src-tauri/resources/NativeOffice/Word/: LaTeXSnipper.Word.dll.manifest  LaTeXSnipper.Word.vsto
src-tauri/resources/NativeOffice/certificates/: native-office-signing.json
src-tauri/resources/Obsidian/: main.js
src-tauri/resources/OfficeJS/: manifest.word.desktop.xml  manifest.word.local.xml  manifest.word.xml  manifest.xml
src-tauri/resources/OfficeJS/manifest/: excel.xml  powerpoint.xml  word.xml
src-tauri/resources/OfficeJS/site/: taskpane.html
src-tauri/resources/OfficeJS/site/assets/: taskpane-BuxgA121.js  taskpane-C8PkW8Wk.js  taskpane-D-qz8LAS.js  taskpane-D3tvalR0.js  taskpane-vACQS5pj.js
src-tauri/resources/OfficeJS/site/taskpane/: index.html
src-tauri/resources/OfficeJS/taskpane/: index.html
src-tauri/resources/PdfRenderer/: manifest.json
src-tauri/resources/WPS/: main.js  manifest.json  manifest.xml  ribbon.xml  uninstall.bat
src-tauri/resources/WPS/js/: adapters.js  bridge-client.js  command-layer.js  ribbon.js
src-tauri/resources/WPS/ui/: taskpane.html  taskpane.js
src-tauri/resources/vba/: LaTeXSnipper.bas  LaTeXSnipperRibbon.bas
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: export.rs  formula.rs  metadata.rs  mod.rs  models.rs  native_office.rs  ocr.rs  office.rs  office_artifact.rs  office_batch.rs  recognition_cmd.rs  recognition_export.rs  runtimes.rs
src-tauri/src/core/: font.rs  metadata.rs  mod.rs  renderer.rs
src-tauri/src/engine/: font.rs  mod.rs  renderer.rs
src-tauri/src/math/: ast.rs  latex.rs  mod.rs  omml.rs
src-tauri/src/office_integration/: batch_conversion.rs  coordinator.rs  document_context.rs  dto.rs  mod.rs  office_js_registry.rs  sessions.rs
src-tauri/src/recognition/: dto.rs  jobs.rs  mod.rs  paths.rs  settings.rs  state.rs  tests.rs  validation.rs
src-tauri/src/screenshot/: commands.rs  dto.rs  mod.rs  state.rs  tests.rs
src-tauri/tests/: office_integration_tests.rs
tests/: desktop-entry.test.mjs  detect-package-impact.test.mjs  ecosystem-delivery.test.mjs  formula-svg-renderer.test.mjs  native-office-realtime-p0.test.mjs  office-live-edit.test.js  office-live-edit.test.mjs  office-wps-release-blockers.test.mjs  office_integration_tests.rs  officejs-academic-layout.test.mjs  officejs-macos-loading.test.mjs  recognition-office-routing.test.mjs  release-artifact-staging.test.mjs  screenshot-overlay.test.mjs  settings-navigation.test.mjs  visio-native-integration.test.mjs
(+516 files in other folders)
