[package]
name = "latexsnipper-office"
version = "1.6.0-rc.2"
edition = "2021"
description = "Independent LaTeX formula editor"
authors = ["LaTeXSnipper"]
license = "AGPL-3.0-only"

[lib]
name = "latexsnipper_office"
path = "src/lib.rs"

[[bin]]
name = "latexsnipper-office"
path = "src/main.rs"
test = false
bench = false

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-os = "2"
tauri-plugin-dialog = "2"
dirs-next = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
axum = "0.7"
axum-server = { version = "0.7", features = ["tls-rustls"] }
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"
rcgen = "0.13"
tower-http = { version = "0.5", features = ["cors", "fs"] }
quick-xml = "0.37"
regex = "1"
base64 = "0.22"
log = "0.4"
env_logger = "0.11"
rand = "0.8"
xcap = { version = "=0.9.7", optional = true }
image = { version = "0.25", default-features = false, features = [
  "png",
  "jpeg",
] }
sha2 = "0.10"
reqwest = { version = "0.12", features = ["json"] }
tokio-util = { version = "0.7", features = ["rt"] }
toml = "0.8"
zip = "0.6"

# LaTeXSnipper Core (via symlink)
latexsnipper-conversion = { path = "latexsnipper-core/crates/conversion", default-features = false }
latexsnipper-ast = { path = "latexsnipper-core/crates/ast", optional = true, default-features = false }
latexsnipper-engine = { path = "latexsnipper-core/crates/engine", optional = true, default-features = false, features = ["native"] }
latexsnipper-api-types = { path = "latexsnipper-core/crates/api-types", optional = true }
latexsnipper-image = { path = "latexsnipper-core/crates/image", optional = true, default-features = false }
latexsnipper-model = { path = "latexsnipper-core/crates/model", optional = true, default-features = false }
latexsnipper-pipeline = { path = "latexsnipper-core/crates/pipeline", optional = true, default-features = false }
latexsnipper-runtime = { path = "latexsnipper-core/crates/runtime", optional = true, default-features = false }

# Windows-specific dependencies for SID and DPAPI
[target.'cfg(windows)'.dependencies]
whoami = "1.5"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Security_Cryptography",
    "Win32_System_Threading",
    "Win32_Storage_FileSystem",
] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["desktop-full"]
desktop-full = [
    "office-bridge",
    "recognition",
    "screen-capture",
]
office-bridge = []
screen-capture = [
    "dep:xcap",
]
recognition = [
    "dep:latexsnipper-engine",
    "dep:latexsnipper-api-types",
    "dep:latexsnipper-ast",
    "dep:latexsnipper-image",
    "dep:latexsnipper-model",
    "dep:latexsnipper-pipeline",
    "dep:latexsnipper-runtime",
]

[profile.release]
strip = true
lto = true
codegen-units = 1

[profile.test]
opt-level = 0
debug = 0
strip = "debuginfo"
incremental = false
codegen-units = 16
